; ModuleID = '/home/carl/AnghaBench/RetroArch/led/drivers/extr_led_overlay.c_overlay_set.c'
source_filename = "/home/carl/AnghaBench/RetroArch/led/drivers/extr_led_overlay.c_overlay_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@MAX_LEDS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"[LED]: invalid led %d\0A\00", align 1
@cur = common dso_local global %struct.TYPE_2__* null, align 8
@OVERLAY_VISIBILITY_VISIBLE = common dso_local global i32 0, align 4
@OVERLAY_VISIBILITY_HIDDEN = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"[LED]: set visibility %d %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @overlay_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @overlay_set(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @MAX_LEDS, align 4
  %11 = icmp sge i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %8, %2
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @RARCH_WARN(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %40

15:                                               ; preds = %8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cur, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %15
  br label %40

26:                                               ; preds = %15
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %4, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %26
  %31 = load i32, i32* @OVERLAY_VISIBILITY_VISIBLE, align 4
  br label %34

32:                                               ; preds = %26
  %33 = load i32, i32* @OVERLAY_VISIBILITY_HIDDEN, align 4
  br label %34

34:                                               ; preds = %32, %30
  %35 = phi i32 [ %31, %30 ], [ %33, %32 ]
  %36 = call i32 @input_overlay_set_visibility(i32 %27, i32 %35)
  %37 = load i32, i32* %5, align 4
  %38 = load i32, i32* %4, align 4
  %39 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %34, %25, %12
  ret void
}

declare dso_local i32 @RARCH_WARN(i8*, i32) #1

declare dso_local i32 @input_overlay_set_visibility(i32, i32) #1

declare dso_local i32 @RARCH_LOG(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
